fix for logging the Experiment

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "experiment = Experiment(training_set)\n",
-    "y = experiment.add_models([Xgboost()]).regression(targets=['MedHouseVal'], splits=[0.8,0.2]).predict(prediction_set)"
+    "y = experiment.add_models([Xgboost()]).regression(target_names=['MedHouseVal'], splits=[0.8,0.2]).predict(prediction_set)"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "source": [
     "from sklearn.linear_model import ElasticNet\n",
     "experiment = Experiment(training_set)\n",
-    "y = experiment.add_models([Sklearn(ElasticNet())]).regression(targets=['MedHouseVal'],splits=[0.8,0.2]).predict(prediction_set)"
+    "y = experiment.add_models([Sklearn(ElasticNet())]).regression(target_names=['MedHouseVal'],splits=[0.8,0.2]).predict(prediction_set)"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "                           Sklearn(ElasticNet()),\n",
     "                           Sklearn(LinearRegression()),\n",
     "                           Sklearn(Lasso()),\n",
-    "                           ]).regression(targets=['MedHouseVal'],splits=[0.8, 0.2]).predict(prediction_set)\n"
+    "                           ]).regression(target_names=['MedHouseVal'],splits=[0.8, 0.2]).predict(prediction_set)\n"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "                           Sklearn(QuantileRegressor()),\n",
     "                           Sklearn(RANSACRegressor()),\n",
     "                           Sklearn(TheilSenRegressor())]).regression_on(\n",
-    "    targets=['MedHouseVal']).fit(splits=0.2).predict(prediction_set)\n"
+    "    target_names=['MedHouseVal']).fit(splits=0.2).predict(prediction_set)\n"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "\n",
     "experiment = Experiment(training_set)\n",
     "y = experiment.add_models([Pytorch(RegressionModel())]).regression(\n",
-    "    targets=['y'], splits=[0.8, 0.2]).predict(prediction_set)\n"
+    "    target_names=['y'], splits=[0.8, 0.2]).predict(prediction_set)\n"
    ]
   },
   {
@@ -188,10 +188,17 @@
     "\n",
     "experiment = Experiment(training_set)\n",
     "y = experiment.add_models([Pytorch(model)]).regression(\n",
-    "    targets=['MedHouseVal'], splits=[0.8, 0.2]).predict(prediction_set)\n",
+    "    target_names=['MedHouseVal'], splits=[0.8, 0.2]).predict(prediction_set)\n",
     "from joltml.joltmeter import RegressionMetrics\n",
     "print(RegressionMetrics.mean_absolute_error.evaluate(y[0].detach().numpy(),prediction_y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
