--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -7,13 +7,21 @@
    "outputs": [],
    "source": [
     "from joltml import Experiment, Xgboost, Sklearn\n",
-    "import tensorflow as tf\n",
     "from sklearn.datasets import fetch_california_housing\n",
     "# Logging is done implicitly\n",
     "dataset = fetch_california_housing(as_frame=True)[\"frame\"]\n",
     "dataset = dataset.dropna()\n",
     "training_set = dataset[:16000]\n",
     "prediction_set = dataset.iloc[16000:,:-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.columns"
    ]
   },
   {
@@ -29,26 +37,6 @@
     "# Write results and default evaluation metrics\n",
     "y = experiment.predict(prediction_set)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = {\n",
-    "    'booster': {'type': 'categorical', 'values': ['gbtree', 'gblinear', 'dart']},\n",
-    "    'lambda': {'type': 'float', 'minimum': 1e-8, 'maximum': 1.0},\n",
-    "    'alpha': {'type': 'float', 'minimum': 1e-8, 'maximum': 1.0},\n",
-    "}\n",
-    "\n",
-    "experiment = Experiment(training_set, experiment_id='trial1')\n",
-    "experiment.add_models([Xgboost()])\n",
-    "experiment.regression_optimize(\n",
-    "    targets=['MedHouseVal'], splits=0.2, n_trials=10, params=params)\n",
-    "# Write results and default evaluation metrics\n",
-    "y = experiment.predict(prediction_set)\n"
    ]
   },
   {
@@ -110,11 +98,8 @@
     "                           Sklearn(Lasso()),\n",
     "                           Sklearn(LassoLars()),\n",
     "                           Sklearn(ARDRegression()),\n",
-    "                           Sklearn(HuberRegressor()),\n",
-    "                           Sklearn(QuantileRegressor()),\n",
-    "                           Sklearn(RANSACRegressor()),\n",
-    "                           Sklearn(TheilSenRegressor())]).regression_on(\n",
-    "    target_names=['MedHouseVal']).fit(splits=0.2).predict(prediction_set)\n"
+    "                        #    Sklearn(HuberRegressor()),\n",
+    "                           ]).regression(target_names=['MedHouseVal'],splits=[0.8, 0.2]).predict(prediction_set)\n"
    ]
   },
   {
@@ -198,6 +183,260 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_diabetes\n",
+    "# Logging is done implicitly\n",
+    "# https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset\n",
+    "dataset = load_diabetes(as_frame=True)[\"frame\"]\n",
+    "dataset = dataset.dropna()\n",
+    "training_set = dataset[:350]\n",
+    "prediction_set = dataset.iloc[350:,:-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment = Experiment(training_set,experiment_id='diabetes_1')\n",
+    "experiment.add_models([Xgboost(n_estimators=400)])\n",
+    "experiment.regression(target_names=['target'],splits=0.2)\n",
+    "# Write results and default evaluation metrics\n",
+    "y = experiment.predict(prediction_set)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "# Logging is done implicitly\n",
+    "# https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset\n",
+    "dataset = load_iris(as_frame=True)[\"frame\"]\n",
+    "dataset = dataset.dropna()\n",
+    "training_set = dataset[:100]\n",
+    "prediction_set = dataset.iloc[100:,:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Models: []\n",
+      "[0]\tvalidation_0-logloss:0.46296\n",
+      "[1]\tvalidation_0-logloss:0.32417\n",
+      "[2]\tvalidation_0-logloss:0.23498\n",
+      "[3]\tvalidation_0-logloss:0.17444\n",
+      "[4]\tvalidation_0-logloss:0.13199\n",
+      "[5]\tvalidation_0-logloss:0.10156\n",
+      "[6]\tvalidation_0-logloss:0.07940\n",
+      "[7]\tvalidation_0-logloss:0.06304\n",
+      "[8]\tvalidation_0-logloss:0.05082\n",
+      "[9]\tvalidation_0-logloss:0.04158\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\tvalidation_0-logloss:0.03452\n",
+      "[11]\tvalidation_0-logloss:0.02905\n",
+      "[12]\tvalidation_0-logloss:0.02476\n",
+      "[13]\tvalidation_0-logloss:0.02477\n",
+      "[14]\tvalidation_0-logloss:0.02477\n",
+      "[15]\tvalidation_0-logloss:0.02477\n",
+      "[16]\tvalidation_0-logloss:0.02477\n",
+      "[17]\tvalidation_0-logloss:0.02477\n",
+      "[18]\tvalidation_0-logloss:0.02477\n",
+      "[19]\tvalidation_0-logloss:0.02477\n",
+      "[20]\tvalidation_0-logloss:0.02477\n",
+      "[21]\tvalidation_0-logloss:0.02477\n",
+      "[22]\tvalidation_0-logloss:0.02477\n",
+      "[23]\tvalidation_0-logloss:0.02477\n",
+      "[24]\tvalidation_0-logloss:0.02477\n",
+      "[25]\tvalidation_0-logloss:0.02477\n",
+      "[26]\tvalidation_0-logloss:0.02477\n",
+      "[27]\tvalidation_0-logloss:0.02477\n",
+      "[28]\tvalidation_0-logloss:0.02477\n",
+      "[29]\tvalidation_0-logloss:0.02477\n",
+      "[30]\tvalidation_0-logloss:0.02477\n",
+      "[31]\tvalidation_0-logloss:0.02477\n",
+      "[32]\tvalidation_0-logloss:0.02477\n",
+      "[33]\tvalidation_0-logloss:0.02477\n",
+      "[34]\tvalidation_0-logloss:0.02477\n",
+      "[35]\tvalidation_0-logloss:0.02477\n",
+      "[36]\tvalidation_0-logloss:0.02477\n",
+      "[37]\tvalidation_0-logloss:0.02477\n",
+      "[38]\tvalidation_0-logloss:0.02477\n",
+      "[39]\tvalidation_0-logloss:0.02477\n",
+      "[40]\tvalidation_0-logloss:0.02477\n",
+      "[41]\tvalidation_0-logloss:0.02477\n",
+      "[42]\tvalidation_0-logloss:0.02477\n",
+      "[43]\tvalidation_0-logloss:0.02477\n",
+      "[44]\tvalidation_0-logloss:0.02477\n",
+      "[45]\tvalidation_0-logloss:0.02477\n",
+      "[46]\tvalidation_0-logloss:0.02477\n",
+      "[47]\tvalidation_0-logloss:0.02477\n",
+      "[48]\tvalidation_0-logloss:0.02477\n",
+      "[49]\tvalidation_0-logloss:0.02477\n",
+      "[50]\tvalidation_0-logloss:0.02477\n",
+      "[51]\tvalidation_0-logloss:0.02477\n",
+      "[52]\tvalidation_0-logloss:0.02477\n",
+      "[53]\tvalidation_0-logloss:0.02477\n",
+      "[54]\tvalidation_0-logloss:0.02477\n",
+      "[55]\tvalidation_0-logloss:0.02477\n",
+      "[56]\tvalidation_0-logloss:0.02477\n",
+      "[57]\tvalidation_0-logloss:0.02477\n",
+      "[58]\tvalidation_0-logloss:0.02477\n",
+      "[59]\tvalidation_0-logloss:0.02477\n",
+      "[60]\tvalidation_0-logloss:0.02477\n",
+      "[61]\tvalidation_0-logloss:0.02477\n",
+      "[62]\tvalidation_0-logloss:0.02477\n",
+      "[63]\tvalidation_0-logloss:0.02477\n",
+      "[64]\tvalidation_0-logloss:0.02477\n",
+      "[65]\tvalidation_0-logloss:0.02477\n",
+      "[66]\tvalidation_0-logloss:0.02477\n",
+      "[67]\tvalidation_0-logloss:0.02477\n",
+      "[68]\tvalidation_0-logloss:0.02477\n",
+      "[69]\tvalidation_0-logloss:0.02477\n",
+      "[70]\tvalidation_0-logloss:0.02477\n",
+      "[71]\tvalidation_0-logloss:0.02477\n",
+      "[72]\tvalidation_0-logloss:0.02477\n",
+      "[73]\tvalidation_0-logloss:0.02477\n",
+      "[74]\tvalidation_0-logloss:0.02477\n",
+      "[75]\tvalidation_0-logloss:0.02477\n",
+      "[76]\tvalidation_0-logloss:0.02477\n",
+      "[77]\tvalidation_0-logloss:0.02477\n",
+      "[78]\tvalidation_0-logloss:0.02477\n",
+      "[79]\tvalidation_0-logloss:0.02477\n",
+      "[80]\tvalidation_0-logloss:0.02477\n",
+      "[81]\tvalidation_0-logloss:0.02477\n",
+      "[82]\tvalidation_0-logloss:0.02477\n",
+      "[83]\tvalidation_0-logloss:0.02477\n",
+      "[84]\tvalidation_0-logloss:0.02477\n",
+      "[85]\tvalidation_0-logloss:0.02477\n",
+      "[86]\tvalidation_0-logloss:0.02477\n",
+      "[87]\tvalidation_0-logloss:0.02477\n",
+      "[88]\tvalidation_0-logloss:0.02477\n",
+      "[89]\tvalidation_0-logloss:0.02477\n",
+      "[90]\tvalidation_0-logloss:0.02477\n",
+      "[91]\tvalidation_0-logloss:0.02477\n",
+      "[92]\tvalidation_0-logloss:0.02477\n",
+      "[93]\tvalidation_0-logloss:0.02477\n",
+      "[94]\tvalidation_0-logloss:0.02477\n",
+      "[95]\tvalidation_0-logloss:0.02477\n",
+      "[96]\tvalidation_0-logloss:0.02477\n",
+      "[97]\tvalidation_0-logloss:0.02477\n",
+      "[98]\tvalidation_0-logloss:0.02477\n",
+      "[99]\tvalidation_0-logloss:0.02477\n",
+      "Saving model 2b84c29b-4d28-45e3-985e-30cd1390bbb4 in .//jolt_lab/iris_1/e680bd63-ab37-41be-b743-8071f80d4919/models/2b84c29b-4d28-45e3-985e-30cd1390bbb4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:335: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(dtype):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:338: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  is_categorical_dtype(dtype) or is_pa_ext_categorical_dtype(dtype)\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:384: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  if is_categorical_dtype(dtype):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:359: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  return is_int or is_bool or is_float or is_categorical_dtype(dtype)\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:520: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(data):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:335: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(dtype):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:338: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  is_categorical_dtype(dtype) or is_pa_ext_categorical_dtype(dtype)\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:384: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  if is_categorical_dtype(dtype):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:359: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  return is_int or is_bool or is_float or is_categorical_dtype(dtype)\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:520: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(data):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:335: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(dtype):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:338: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  is_categorical_dtype(dtype) or is_pa_ext_categorical_dtype(dtype)\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:384: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  if is_categorical_dtype(dtype):\n",
+      "c:\\MyCodes\\joltml\\.venv\\Lib\\site-packages\\xgboost\\data.py:359: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  return is_int or is_bool or is_float or is_categorical_dtype(dtype)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<joltml.experiment.Experiment at 0x259765ce3d0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joltml import Experiment, Xgboost, Sklearn\n",
+    "experiment = Experiment(training_set,experiment_id='iris_1')\n",
+    "experiment.add_models([Xgboost()])\n",
+    "experiment.classification(target_names=['target'],splits=0.2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'booster': {'type': 'categorical', 'values': ['gbtree', 'gblinear', 'dart']},\n",
+    "    'lambda': {'type': 'float', 'minimum': 1e-8, 'maximum': 1.0},\n",
+    "    'alpha': {'type': 'float', 'minimum': 1e-8, 'maximum': 1.0},\n",
+    "}\n",
+    "\n",
+    "experiment = Experiment(training_set, experiment_id='trial1')\n",
+    "experiment.add_models([Xgboost()])\n",
+    "experiment.regression_optimize(\n",
+    "    targets=['MedHouseVal'], splits=0.2, n_trials=10, params=params)\n",
+    "# Write results and default evaluation metrics\n",
+    "y = experiment.predict(prediction_set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -217,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
